# protocol

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
include/bsfchat/: Constants.h  ErrorCodes.h  Identifiers.h  JwtUtils.h  MatrixTypes.h  Permissions.h
src/: ErrorCodes.cpp  Identifiers.cpp  JwtUtils.cpp  MatrixTypes.cpp  Permissions.cpp
tests/: CMakeLists.txt  test_identifiers.cpp  test_jwt.cpp  test_matrix_types.cpp
